update: fix weekly graph card design and top card spacing

--- a/settings.css
+++ b/settings.css
@@ -123,6 +123,7 @@ p {
     display: flex;
     flex-direction: row;
     gap: 16px;
+    width: 100%;
 }
 
 .analytics-card {
@@ -131,7 +132,7 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    width: 152px;
+    flex: 1;
     height: 102px;
     border-radius: 8px;
     background: linear-gradient(180deg, #FFF 0%, var(--sys-blue-grad) 100%);
@@ -181,6 +182,7 @@ p {
     padding: 8px 16px;
     border-radius: 8px;
     background: #FFFFFF;
+    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: column;
 }
@@ -189,7 +191,8 @@ p {
     width: 100%;
     padding: 4px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    align-items: center;
 }
 
 /* Custom Dropdown Container */
